// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary correctly with 1 expense 1`] = `
<h1>
  Viewing 
   expense
   totalling 
  $1.23
</h1>
`;

exports[`should render ExpenseSummary correctly with multiple expenses 1`] = `
<h1>
  Viewing 
   expense
   totalling 
  $342.34
</h1>
`;
